Fixed layout bugs

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -6,5 +6,14 @@ body {
 }
 
 .main-container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.main {
   padding: 10px;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
 }
