--- a/src/components/model-operations.module.scss
+++ b/src/components/model-operations.module.scss
@@ -2,7 +2,15 @@
   width: 400px;
 }
 
+.title {
+  margin: 20px 20px -10px;
+  font-family: Roboto, -apple-system, BlinkMacSystemFont, "Segoe UI", Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
 .buttons {
+  margin: 0 20px;
+
   & > button:not(:first-child) {
     margin-left: 10px;
   }
